force-app/main/default/objects/Receipt__c/fields/Approve_Reject_Comment__c.field-meta.xml
<CustomField>
    <fullName>Approve_Reject_Comment__c</fullName>
    <label>Approve/Reject Comment</label>
    <type>TextArea</type>
</CustomField>