force-app/main/default/objects/Receipt__c/fields/Branch_Number__c.field-meta.xml
<CustomField>
    <fullName>Branch_Number__c</fullName>
    <label>Branch Number</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>From masters</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>