force-app/main/default/objects/Receipt__c/fields/Cashier__c.field-meta.xml
<CustomField>
    <fullName>Cashier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cashier</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please Add Branch Cashier!!</errorMessage>
        <filterItems>
            <field>User.Designation__c</field>
            <operation>equals</operation>
            <value>Cashier</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Receipts</relationshipName>
    <type>Lookup</type>
</CustomField>