force-app/main/default/objects/Receipt__c/fields/Fee_Code__c.field-meta.xml
<CustomField>
    <fullName>Fee_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Get related Fee code for this receipt</description>
    <label>Fee Code</label>
    <referenceTo>Fee_Creation__c</referenceTo>
    <relationshipLabel>Receipts</relationshipLabel>
    <relationshipName>Receipts</relationshipName>
    <type>Lookup</type>
</CustomField>