force-app/main/default/objects/Receipt__c/fields/Loan_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Loan_Reference_Number__c</fullName>
    <label>Loan Reference Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>