force-app/main/default/objects/Receipt__c/fields/Pre_Login__c.field-meta.xml
<CustomField>
    <fullName>Pre_Login__c</fullName>
    <label>Pre-Login</label>
    <referenceTo>Pre_Login__c</referenceTo>
    <relationshipLabel>Receipts</relationshipLabel>
    <relationshipName>Receipts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>