force-app/main/default/objects/Receipt__c/fields/Receipt_Amount__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Amount__c</fullName>
    <label>Receipt Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>