force-app/main/default/objects/Receipt__c/fields/Receipt_Details_Author__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Details_Author__c</fullName>
    <label>Receipt Details Author</label>
    <length>100</length>
    <type>Text</type>
</CustomField>