force-app/main/default/objects/Receipt__c/fields/Receipt_Id__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Id__c</fullName>
    <label>Receipt Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>